--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -1,12 +1,13 @@
 bcr_test_module:
   module_path: "e2e/smoke"
   matrix:
-    platform: ["debian10", "macos", "ubuntu2004", "windows"]
+    platform: ["ubuntu2404"]
     bazel: ["8.x"]
   tasks:
     run_tests:
       name: "Run test module"
       platform: ${{ platform }}
       bazel: ${{ bazel }}
+      build_flags: "--enable_bzlmod"
       test_targets:
         - "//..."
