--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,18 +14,96 @@ concurrency:
   group: concurrency-group::${{ github.workflow }}::${{ github.event.pull_request.number > 0 && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}${{ github.ref_name == 'main' && format('::{0}', github.run_id) || ''}}
   cancel-in-progress: ${{ github.ref_name != 'main' }}
 jobs:
+  matrix-prep-os:
+    # Prepares the 'os' axis of the test matrix, to reduce costs since GitHub hosted runners cost more on some platforms.
+    # https://docs.github.com/en/billing/managing-billing-for-github-actions/about-billing-for-github-actions#included-storage-and-minutes
+    runs-on: ubuntu-latest
+    steps:
+      - id: linux
+        run: echo "os=ubuntu-latest" >> $GITHUB_OUTPUT
+    outputs:
+      # Will look like ["ubuntu-latest", "windows-latest", "macos-latest"]
+      os: ${{ toJSON(steps.*.outputs.os) }}
+
+  matrix-prep-bazelversion:
+    # Prepares the 'bazelversion' axis of the test matrix
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - id: bazel_8
+        run: echo "bazelversion=8.4.2" >> $GITHUB_OUTPUT
+    outputs:
+      # Will look like ["<version from .bazelversion>", "x.y.z"]
+      bazelversions: ${{ toJSON(steps.*.outputs.bazelversion) }}
   test:
-    uses: bazel-contrib/.github/.github/workflows/bazel.yaml@v6
-    with:
-      folders: |
-        [
-          ".",
-          "e2e/smoke"
-        ]
-      exclude: |
-        [
-          {"folder": ".", "bzlmodEnabled": false}
-        ]
+    # The type of runner that the job will run on
+    runs-on: ${{ matrix.os }}
+
+    needs:
+      - matrix-prep-bazelversion
+      - matrix-prep-os
+
+    # Run bazel test in each workspace with each version of Bazel supported
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ${{ fromJSON(needs.matrix-prep-os.outputs.os) }}
+        bazelversion: ${{ fromJSON(needs.matrix-prep-bazelversion.outputs.bazelversions) }}
+        folder: [".", "e2e/smoke"]
+        bzlmodEnabled: [true]
+        exclude: [{ "folder": ".", "bzlmodEnabled": false }]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      - uses: bazel-contrib/setup-bazel@0.8.0
+        with:
+          repository-cache: true
+          bazelrc: |
+            common --announce_rc
+            common --color=yes
+            common --enable_bzlmod=${{ matrix.bzlmodEnabled }}
+
+      - name: Configure bazelrc --enable_workspace (bazelversion >= 7.1.0)
+        working-directory: ${{ matrix.folder }}
+        if: ${{ !matrix.bzlmodEnabled && !startsWith(matrix.bazelversion, '6.') && !startsWith(matrix.bazelversion, '7.0.') }}
+        run: |
+          echo "common --enable_workspace" >> .bazelrc
+
+      - name: Configure Bazel version
+        working-directory: ${{ matrix.folder }}
+        run: |
+          echo "${{ matrix.bazelversion }}" > .bazelversion
+          bazel version
+
+      - name: Check for test.sh
+        # Checks for the existence of test.sh in the folder. Downstream steps can use
+        # steps.has_test_sh.outputs.files_exists as a conditional.
+        id: has_test_sh
+        uses: andstor/file-existence-action@v3
+        with:
+          files: "${{ matrix.folder }}/test.sh"
+
+      # See https://github.com/bazel-contrib/publish-to-bcr#including-patches
+      - name: verify bcr patches
+        if: matrix.bzlmodEnabled && hashFiles('.bcr/patches/*.patch') != '' && ! startsWith(matrix.os, 'windows')
+        run: patch --dry-run -p1 --fuzz 0 < .bcr/patches/*.patch
+
+      - name: Test
+        working-directory: ${{ matrix.folder }}
+        run: "bazel test //..."
+
+      - name: Run ./test.sh
+        # Run if there is a test.sh file in the folder
+        # Don't run integration tests on Windows since they are bash scripts and Windows runs Powershell
+        if: steps.has_test_sh.outputs.files_exists == 'true' && ! startsWith(matrix.os, 'windows')
+        working-directory: ${{ matrix.folder }}
+        shell: bash
+        # Run the script potentially setting BZLMOD_FLAG=--enable_bzlmod. All test.sh
+        # scripts that run bazel directly should make use of this variable.
+        run: BZLMOD_FLAG=--enable_bzlmod=${{ matrix.bzlmodEnabled }} ./test.sh
   pre-commit:
     runs-on: ubuntu-latest
     steps:
