--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@
 
 # Commitizen runs in commit-msg stage
 # but we don't want to run the other hooks on commit messages
-default_stages: [commit]
+default_stages: [pre-commit]
 # Use a slightly older version of node by default
 # as the default uses a very new version of GLIBC
 default_language_version:
@@ -24,10 +24,6 @@ repos:
       - id: destroyed-symlinks
       - id: detect-private-key
       - id: end-of-file-fixer
-        exclude: |
-          (?x)^(
-            docs/
-          )
       - id: trailing-whitespace
   # Check formatting and lint for starlark code
   - repo: https://github.com/keith/pre-commit-buildifier
@@ -42,18 +38,6 @@ repos:
       # Requires that commitizen is already installed
       - id: commitizen
         stages: [commit-msg]
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
-    hooks:
-      - id: prettier
-  - repo: https://github.com/google/yamlfmt
-    rev: v0.14.0
-    hooks:
-      - id: yamlfmt
-        exclude: |
-          (?x)^(
-            .bcr/config.yml
-          )
   - repo: https://github.com/crate-ci/typos
     rev: v1.28.4
     hooks:
