--- a/e2e/smoke/MODULE.bazel
+++ b/e2e/smoke/MODULE.bazel
@@ -7,27 +7,24 @@ local_path_override(
 )
 
 aptprep = use_extension("@rules_aptprep//aptprep:extensions.bzl", "aptprep")
-
 aptprep.toolchain(
     archive_url = "https://github.com/nickguletskii/aptprep/releases/download/v0.1.2/aptprep_linux_x86_64.tar",
     sha256 = "4d1b992540fb9856561f101d8ef4a54b7e74529a65171468f7940933ad0a0e52",
 )
-
 aptprep.packages(
     config = "//:aptprep.yaml",
     lockfile = "//:lockfile.json",
     repo_name = "aptprep_smoke_packages",
 )
-
 aptprep.sysroot(
     config = "//:aptprep.yaml",
     lockfile = "//:lockfile.json",
-    repo_name = "aptprep_smoke_sysroot",
     packages_list = [
         "bash",
         "curl",
     ],
+    repo_name = "aptprep_smoke_sysroot",
 )
+use_repo(aptprep, "aptprep_binary_archive", "aptprep_smoke_packages", "aptprep_smoke_sysroot", "aptprep_toolchains")
 
-use_repo(aptprep, "aptprep_binary_archive", "aptprep_toolchains", "aptprep_smoke_packages", "aptprep_smoke_sysroot")
 register_toolchains("@aptprep_toolchains//:all")
